--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Editor, Assembler and Emulator</title>
         <link rel="stylesheet" href="style.css">
         <h1>Online Fictional Computer</h1>
+        <img src="construction.gif" style="position: fixed; top: 2px; right: 2px;"></img>
     </head>
     <body>
         <div id="mainflex">
