moved things outta head

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Editor, Assembler and Emulator</title>
+        <title>Editor...eventually Assembler and Emulator</title>
         <link rel="stylesheet" href="style.css">
-        <h1>Online Fictional Computer</h1>
-        <img src="construction.gif" style="position: fixed; top: 2px; right: 2px;"></img>
     </head>
     <body>
+        <h1>Online Fictional Computer</h1>
+        <img src="construction.gif" style="position: fixed; top: 2px; right: 2px;"></img>
         <div id="mainflex">
             <pre id="code" class="code">
 hello:  "Hello, world", 0
