--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@ done ret
                 <button id="run">▶</button>
             </div>
         </div>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
