some sorta emulator (WIP)

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ done ret
                 </pre>
             </div>
             <div id="emulator" tabindex="1" class="border">
-                <canvas id="screen" width="64" height="64"></canvas>
-                <button id="run">▶</button>
+                <canvas id="screen" width="60" height="60"></canvas>
+                <button id="runbutton">▶</button>
             </div>
         </div>
         <script src="index.js" type="module"></script>
