--- a/mlquiz/index.html
+++ b/mlquiz/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick political sorting quiz (UNDER CONSTRUCTION)</title>
+    <title>Quick political sorting quiz</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <link href="anti-kompass.png" rel="shortcut icon">
   </head>
@@ -14,7 +14,7 @@
     <p><span id="buttons"></span></p>
     <hr>
     <footer class="info">
-    <p>Main Site: <a href="../">44100hz.neocities.org</a></p>
+    <p><a href="../">Main site</a></p>
     <p>If you have any feedback on this quiz, send mail to ssaammp at gee mail dot com. Did you read the introduction?</p>
     </footer>
     <script src="index.js"></script>
