improved footer description

--- a/mlquiz/index.html
+++ b/mlquiz/index.html
@@ -15,7 +15,10 @@
     <hr>
     <footer class="info">
     <p><a href="../">Main site</a></p>
-    <p>If you have any feedback on this quiz, send mail to ssaammp at gee mail dot com. Did you read the introduction?</p>
+    <p>Did you read the introduction?</p>
+    <p>I worked hard on this website, so please share it with other people. Together, we can improve the domain of political information, moving away from idealistic thinking and towards dialectical materialism. Thanks very much to everyone who has contributed feedback to improve this project.</p>
+    <p>If you have feedback on this quiz, send mail to ssaammp at gee mail dot com</p>
+    <p>If there is a technical issue with the quiz, or would like to view or modify the source code, go to <a href="https://github.com/44100hertz/44100hertz.github.io">the GitHub source code for this site.</a></p>
     </footer>
     <script src="index.js"></script>
   </body>
