--- a/mlquiz/index.html
+++ b/mlquiz/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="/mlquiz/intro-image.png" />
     <title>Quick political sorting quiz</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <link href="anti-kompass.png" rel="shortcut icon">
