more properties for preview

--- a/mlquiz/index.html
+++ b/mlquiz/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="/mlquiz/intro-image.png" />
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://44100hertz.github.io/mlquiz">
+    <meta property="og:title" content="ML Political Tree Test">
+    <meta property="og:description" content="This test will determine your ideology from an ML perspective in as few questions as possible.">
+    <meta property="og:image" content="https://44100hertz.github.io/mlquiz/intro-image.png">
+
     <title>Quick political sorting quiz</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <link href="anti-kompass.png" rel="shortcut icon">
