--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <title>
       44100hz's Site - Front Page
     </title>
   </head>
   <body>
     <h1>44's site</h1>
-    <p><a href="./mlquiz/index.html">Take an ML-biased political sorting quiz here</a></p>
+    <h2>Toys and Games</h2>
     <p><a href="./fantasy-console/index.html">Here is an unfinished in-browser fantasy console and assembler.</a></p>
+    <h2>Quizzes</h2>
+    <p><a href="./male-quiz/index.html">A quiz to determine your personality type. Are you a Sigma?</a></p>
+    <p><a href="./mlquiz/index.html">A Marxist-Leninist biased quiz to determine your political alignment.</a></p>
+    <p><a href="./leftoid-quiz/index.html">A quiz to determine how badly western leftism has rotted your brain.</a></p>
   </body>
 </html>
