--- a/cpicard/member.html
+++ b/cpicard/member.html
@@ -29,13 +29,15 @@
       <div class="slogan">
         MEMBER OF CENTER FOR POLITICAL INNOVATION
       </div>
+      <div>
         <div class="info">
           twitter.com/SamBismuth_
         </div>
         <div class="info">
           youtube.com/@SamBismuth
         </div>
-      <div class="slogan" style="padding-top: 0.05in;">
+      </div>
+      <div class="slogan">
         We Need a Government of Action
         to Fight for Working Families
       </div>
@@ -44,8 +46,10 @@
   </body>
   <style>
     .info {
-      font-family: Arial Narrow;
+      font-family: Arial;
       font-size: 0.15in;
+      margin-top: 0.01in;
+      margin-bottom: 0.01in;
     }
 
     .titleinfo {
