Basic gameplay Level 1&2

--- a/games/redbricks/index.html
+++ b/games/redbricks/index.html
@@ -8,10 +8,11 @@
     <meta name="description" content="RED BRICKS">
     <meta name="author" content="44100HZ">
     <link rel="stylesheet" href="style.css">
-    <script src="bricks.js" type="module"></script>
+    <script src="game.js" type="module"></script>
 </head>
 <body>
     <div id="playfield">
+        <pre id="scoreboard"></pre>
     </div>
 </body>
 </html>
