Add death messages

--- a/games/redbricks/index.html
+++ b/games/redbricks/index.html
@@ -12,6 +12,12 @@
 </head>
 <body>
     <div id="playfield">
+        <div class="viewport">
+            <div class="entities"></div>
+            <div class="statusMessage">
+                <div></div>
+            </div>
+        </div>
         <pre id="scoreboard"></pre>
     </div>
 </body>
