--- a/games/redbricks/index.html
+++ b/games/redbricks/index.html
@@ -11,6 +11,10 @@
     <script src="game.js" type="module"></script>
 </head>
 <body>
+    <div class="Title">
+        <div class="description">
+        </div>
+    </div>
     <div id="playfield">
         <div class="viewport">
             <div class="entities"></div>
