close script tag, whoops

--- a/structedit/index.html
+++ b/structedit/index.html
@@ -9,6 +9,6 @@
     <body>
         <textarea id="expression-pane">1 + 2 * 3</textarea>
         <div id="tree-pane" style="position: relative"></div>
-        <script src="liveparse.js" type="module">
+        <script src="./liveparse.js" type="module"></script>
     </body>
 </html>
