WIP canvas for effects

--- a/games/redbricks/index.html
+++ b/games/redbricks/index.html
@@ -21,6 +21,7 @@
             <div class="statusMessage">
                 <div></div>
             </div>
+            <canvas width=240 height=240 id="effects"></canvas>
         </div>
         <pre id="scoreboard"></pre>
     </div>
